# app/Models/Periode.php
@@ -1,0 +1,19 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Periode extends Model
+{
+    use HasFactory;
+
+    protected $fillable = [
+        "label",
+        "abreviation",
+        "description",
+        "slug",
+        "is_deleted",
+    ];
+}
